# routine

./: .gitignore  CMakeLists.txt  Makefile.freeBSD  Makefile.linux  README.md  bitmap  check  dockDockBuildParams.json  freebsd  linux  main.c  main0.c  main_t.c  main_test.c  makefile  pc_t.c  reuse.h  routine.c  routine.h  routine.h.gch  routine_freebsd.s  routine_helper.c  routine_linux.s
.github/workflows/: c-cpp.yml
src/: bitmap.c  bitmap.h  reuse.c  reuse.h  routine.c  routine.h  routine_base.c  routine_base.h  routine_common.c  routine_common.h  routine_dfa.c  routine_dfa.h  routine_event.c  routine_event.h  routine_freebsd.s  routine_helper.c  routine_helper.h  routine_kernel_api.c  routine_kernel_api.h  routine_linux.s  routine_user_api.c  routine_user_api.h  stack_collect.c  stack_collect.h
src/include/: bitmap.h  routine_base.h  routine_common.h  routine_dfa.h
test/: compare.c  makefile  pc  pc_t.c  test_bitmap.c  test_reuse.c  test_wait.c  unit_test.c  unit_test.h
